--- a/WorkingScripts/o3_new.ipynb
+++ b/WorkingScripts/o3_new.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +83,15 @@
     "# get parent directory\n",
     "parent_dir = os.path.dirname(cwd)\n",
     "\n",
+    "# get grandparent directory so that the gbd data not uploaded to github\n",
+    "grandparent_dir = os.path.dirname(parent_dir)\n",
+    "\n",
     "\n",
     "# IDAHo\n",
     "\n",
     "\n",
     "# building path\n",
-    "path = os.path.join(parent_dir, 'Data', 'building_data_gdb', 'CA_Structures.gdb')\n",
+    "path = os.path.join(grandparent_dir, 'building_data_gdb', 'CA_Structures.gdb')\n",
     "\n",
     "\n",
     "# read the data\n",
@@ -97,7 +100,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states_data = [\n",
+    "    (\"Alabama\", \"AL\"), (\"Alaska\", \"AK\"), (\"Arizona\", \"AZ\"), (\"Arkansas\", \"AR\"),\n",
+    "    (\"California\", \"CA\"), (\"Colorado\", \"CO\"), (\"Connecticut\", \"CT\"), (\"Delaware\", \"DE\"),\n",
+    "    (\"Florida\", \"FL\"), (\"Georgia\", \"GA\"), (\"Hawaii\", \"HI\"), (\"Idaho\", \"ID\"),\n",
+    "    (\"Illinois\", \"IL\"), (\"Indiana\", \"IN\"), (\"Iowa\", \"IA\"), (\"Kansas\", \"KS\"),\n",
+    "    (\"Kentucky\", \"KY\"), (\"Louisiana\", \"LA\"), (\"Maine\", \"ME\"), (\"Maryland\", \"MD\"),\n",
+    "    (\"Massachusetts\", \"MA\"), (\"Michigan\", \"MI\"), (\"Minnesota\", \"MN\"), (\"Mississippi\", \"MS\"),\n",
+    "    (\"Missouri\", \"MO\"), (\"Montana\", \"MT\"), (\"Nebraska\", \"NE\"), (\"Nevada\", \"NV\"),\n",
+    "    (\"New Hampshire\", \"NH\"), (\"New Jersey\", \"NJ\"), (\"New Mexico\", \"NM\"), (\"New York\", \"NY\"),\n",
+    "    (\"North Carolina\", \"NC\"), (\"North Dakota\", \"ND\"), (\"Ohio\", \"OH\"), (\"Oklahoma\", \"OK\"),\n",
+    "    (\"Oregon\", \"OR\"), (\"Pennsylvania\", \"PA\"), (\"Rhode Island\", \"RI\"), (\"South Carolina\", \"SC\"),\n",
+    "    (\"South Dakota\", \"SD\"), (\"Tennessee\", \"TN\"), (\"Texas\", \"TX\"), (\"Utah\", \"UT\"),\n",
+    "    (\"Vermont\", \"VT\"), (\"Virginia\", \"VA\"), (\"Washington\", \"WA\"), (\"West Virginia\", \"WV\"),\n",
+    "    (\"Wisconsin\", \"WI\"), (\"Wyoming\", \"WY\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory already exists: /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/building_data_gdb\n",
+      "The gdb data already exists in /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/building_data_gdb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for the grandparent directory for the gbd data\n",
+    "# if not exists, create it\n",
+    "building_data = os.path.join(grandparent_dir, 'building_data_gdb')\n",
+    "if not os.path.exists(building_data):\n",
+    "    os.makedirs(building_data)\n",
+    "    print(f\"Created directory: {building_data}\")\n",
+    "else:\n",
+    "    print(f\"Directory already exists: {building_data}\")\n",
+    "\n",
+    "\n",
+    "# then check whether the gdb data exists\n",
+    "# if not exists, download it\n",
+    "states = states_data[4][1]\n",
+    "gdb_file = os.path.join(building_data, f\"{states}_Structures.gdb\")\n",
+    "if not os.path.exists(gdb_file):\n",
+    "    print(f\"Downloading the gdb data to {building_data}\")\n",
+    "else:\n",
+    "    print(f\"The gdb data already exists in {building_data}\")\n",
+    "    # download the gdb data zip to previous directory\n",
+    "# download the gdb data zip to previous directory\n",
+    "# url = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +373,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
