Add function to download .gdb files, requires state input. Code still messy. Need to tidy it up later.

--- a/WorkingScripts/o3_new.ipynb
+++ b/WorkingScripts/o3_new.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,92 @@
     "import numpy as np\n",
     "import fiona\n",
     "import pyogrio\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "import requests\n",
+    "import zipfile\n",
+    "import os\n",
+    "from io import BytesIO\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DOWNLOAD BUILDING DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of the webpage to scrape\n",
+    "url = \"https://disasters.geoplatform.gov/USA_Structures/\"\n",
+    "\n",
+    "def fetch_state_links():\n",
+    "    \"\"\"Fetches state names and their corresponding links from the webpage.\"\"\"\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "        links = soup.find_all(\"a\", href=True)\n",
+    "        return {link.text.strip(): link[\"href\"] for link in links if \"Deliverable\" in link[\"href\"]}\n",
+    "    else:\n",
+    "        print(\"Failed to fetch the webpage. Status code:\", response.status_code)\n",
+    "        return {}\n",
+    "\n",
+    "def get_link_by_state(state_name, state_links):\n",
+    "    \"\"\"Returns the link for a given state name.\"\"\"\n",
+    "    return state_links.get(state_name, \"State not found\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_and_extract_zip(state_name, state_links):\n",
+    "    \"\"\"Downloads and extracts a ZIP file from the given URL.\"\"\"\n",
+    "    url = get_link_by_state(state_name, state_links)\n",
+    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    output_dir = os.path.join(parent_dir, 'Data', 'building_data_gdb')\n",
+    "\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    if response.status_code == 200:\n",
+    "        os.makedirs(output_dir, exist_ok=True)\n",
+    "        zip_path = os.path.join(output_dir, f\"{state_name}_Structures.zip\")\n",
+    "        \n",
+    "        with open(zip_path, \"wb\") as f:\n",
+    "            for chunk in response.iter_content(chunk_size=8192):\n",
+    "                f.write(chunk)\n",
+    "        \n",
+    "        with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(output_dir)\n",
+    "        \n",
+    "        print(f\"Downloaded and extracted to {output_dir}\")\n",
+    "    else:\n",
+    "        print(\"Failed to download the ZIP file.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded and extracted to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb\n"
+     ]
+    }
+   ],
+   "source": [
+    "state_links = fetch_state_links()\n",
+    "download_and_extract_zip(\"California\", state_links)"
    ]
   },
   {
@@ -166,17 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_building_data_directory():\n",
+    "def get_building_data_directory(stateid=\"CA\"):\n",
     "    cwd = os.getcwd()\n",
     "\n",
     "    # get parent directory\n",
     "    parent_dir = os.path.dirname(cwd)\n",
+    "    # get the building data directory\n",
+    "    building_data_directory = os.path.join(parent_dir, 'Data', 'building_data_gdb')\n",
+    "    # find all folder in the building data directory\n",
+    "    folders = [f for f in os.listdir(building_data_directory) if os.path.isdir(os.path.join(building_data_directory, f))]\n",
+    "    # get the folder that ends with stateid\n",
+    "    stateid_dir= [f for f in folders if f.endswith(f'{stateid}')][0]\n",
     "\n",
-    "    return os.path.join(parent_dir, 'Data', 'building_data_gdb')\n",
+    "    return os.path.join(building_data_directory, stateid_dir, f'{stateid}_Structures.gdb')\n",
     "\n",
     "def get_building_data_csv(stateid):\n",
     "    building_data_directory = get_building_data_directory()\n",
@@ -201,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +301,7 @@
     "    # if not, check if the gdb file exists\n",
     "    # if exists, read it\n",
     "def read_building_data(stateid):\n",
-    "    building_data_directory = get_building_data_directory()\n",
+    "    building_data_directory = get_building_data_directory(stateid)\n",
     "\n",
     "    # get the csv file\n",
     "    csv_path = get_building_data_csv(stateid)\n",
@@ -220,7 +311,7 @@
     "        return gpd.read_file(csv_path)\n",
     "    else:\n",
     "        print(f\"{csv_path} does not exist.\")\n",
-    "        gdb_path = os.path.join(building_data_directory, f'{stateid}_Structures.gdb')\n",
+    "        gdb_path = os.path.join(building_data_directory)\n",
     "        if os.path.exists(gdb_path):\n",
     "            print(f\"Reading {gdb_path}\")\n",
     "            return gpd.read_file(gdb_path)\n",
@@ -254,20 +345,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/CA.csv does not exist.\n",
-      "Reading /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/CA_Structures.gdb\n"
+      "/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb/CA.csv does not exist.\n",
+      "Reading /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb\n"
      ]
     }
    ],
    "source": [
     "gdf = read_building_data(\"CA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf"
    ]
   },
   {
@@ -2486,6 +2586,31 @@
     "final_output = pd.merge(eventdata, df_output, left_on='GEOID', right_on='CENSUSCODE', how='left')\n",
     "final_output.fillna(0, inplace=True)\n",
     "final_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SAVE OUTPUT TO EVENT DIR\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_output(final_output, eventid = 'nc72282711'):\n",
+    "    \"\"\"\n",
+    "    Read event data from a GPKG file.\n",
+    "    \"\"\"\n",
+    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    event_dir = os.path.join(parent_dir, 'ShakeMaps', eventid)\n",
+    "\n",
+    "    final_output.to_csv(os.path.join(event_dir, f'o3_output_{eventid}.csv'), index=False)\n",
+    "\n",
+    "save_output(final_output)"
    ]
   }
  ],
