Problem: need large resources to run the model. Need to split processing to chunks.

--- a/WorkingScripts/o3_new.ipynb
+++ b/WorkingScripts/o3_new.ipynb
@@ -31,85 +31,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DOWNLOAD BUILDING DATA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# URL of the webpage to scrape\n",
-    "url = \"https://disasters.geoplatform.gov/USA_Structures/\"\n",
-    "\n",
-    "def fetch_state_links():\n",
-    "    \"\"\"Fetches state names and their corresponding links from the webpage.\"\"\"\n",
-    "    response = requests.get(url)\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "        links = soup.find_all(\"a\", href=True)\n",
-    "        return {link.text.strip(): link[\"href\"] for link in links if \"Deliverable\" in link[\"href\"]}\n",
-    "    else:\n",
-    "        print(\"Failed to fetch the webpage. Status code:\", response.status_code)\n",
-    "        return {}\n",
-    "\n",
-    "def get_link_by_state(state_name, state_links):\n",
-    "    \"\"\"Returns the link for a given state name.\"\"\"\n",
-    "    return state_links.get(state_name, \"State not found\")   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def download_and_extract_zip(state_name, state_links):\n",
-    "    \"\"\"Downloads and extracts a ZIP file from the given URL.\"\"\"\n",
-    "    url = get_link_by_state(state_name, state_links)\n",
-    "    parent_dir = os.path.dirname(os.getcwd())\n",
-    "    output_dir = os.path.join(parent_dir, 'Data', 'building_data_gdb')\n",
-    "\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    if response.status_code == 200:\n",
-    "        os.makedirs(output_dir, exist_ok=True)\n",
-    "        zip_path = os.path.join(output_dir, f\"{state_name}_Structures.zip\")\n",
-    "        \n",
-    "        with open(zip_path, \"wb\") as f:\n",
-    "            for chunk in response.iter_content(chunk_size=8192):\n",
-    "                f.write(chunk)\n",
-    "        \n",
-    "        with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(output_dir)\n",
-    "        \n",
-    "        print(f\"Downloaded and extracted to {output_dir}\")\n",
-    "    else:\n",
-    "        print(\"Failed to download the ZIP file.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded and extracted to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb\n"
-     ]
-    }
-   ],
-   "source": [
-    "state_links = fetch_state_links()\n",
-    "download_and_extract_zip(\"California\", state_links)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# READ EVENT DATA"
    ]
   },
@@ -251,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +191,7 @@
     "    return os.path.join(building_data_directory, stateid_dir, f'{stateid}_Structures.gdb')\n",
     "\n",
     "def get_building_data_csv(stateid):\n",
-    "    building_data_directory = get_building_data_directory()\n",
+    "    building_data_directory = get_building_data_directory(stateid)\n",
     "\n",
     "    # get the csv file\n",
     "    return os.path.join(building_data_directory, f'{stateid}.csv')"
@@ -341,452 +262,6 @@
     "    (\"Vermont\", \"VT\"), (\"Virginia\", \"VA\"), (\"Washington\", \"WA\"), (\"West Virginia\", \"WV\"),\n",
     "    (\"Wisconsin\", \"WI\"), (\"Wyoming\", \"WY\")\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb/CA.csv does not exist.\n",
-      "Reading /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_data_gdb/Deliverable20230728CA/CA_Structures.gdb\n"
-     ]
-    }
-   ],
-   "source": [
-    "gdf = read_building_data(\"CA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# AGGREGATE BUILDING DATA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to remap OCC_CLS and PRIM_OCC\n",
-    "def remap_occupancy_classes(gdf):\n",
-    "    # Define the mapping dictionaries\n",
-    "    building_data = gdf[['BUILD_ID', 'OCC_CLS', 'PRIM_OCC', 'SQFEET', 'FIPS', 'CENSUSCODE', 'LONGITUDE', 'LATITUDE', 'Shape_Length', 'Shape_Area',\n",
-    "                    'geometry']]\n",
-    "    # mapping the occupancy class\n",
-    "    mapping = {\n",
-    "        'Agriculture':'OTHER', 'Education':'OTHER', 'Residential':'RESIDENTIAL', 'Unclassified':'OTHER',\n",
-    "        'Commercial':'OTHER', 'Government':'OTHER', 'Industrial':'OTHER', 'Utility and Misc':'OTHER',\n",
-    "        'Assembly':'OTHER'\n",
-    "    }\n",
-    "    building_data['OCC_CLS'] = building_data['OCC_CLS'].map(mapping)\n",
-    "\n",
-    "    # mapping the primary occupancy\n",
-    "    mapping = {i:'OTHER' for i in building_data['PRIM_OCC'].unique() if i not in ['Single Family Dwelling', 'Multi - Family Dwelling']}\n",
-    "    residential = {'Single Family Dwelling':'SINGLE FAMILY', 'Multi - Family Dwelling':'MULTI FAMILY'}\n",
-    "    mapping.update(residential)\n",
-    "    building_data['PRIM_OCC'] = building_data['PRIM_OCC'].map(mapping)\n",
-    "    return building_data\n",
-    "\n",
-    "\n",
-    "# function to aggregate the building counts by GEODI, OCC_CLS, PRIM_OCC\n",
-    "def aggregate_building_counts(gdf):\n",
-    "    building_data = remap_occupancy_classes(gdf)\n",
-    "    # group by GEODI, OCC_CLS, PRIM_OCC and sum the counts\n",
-    "    count_building_data = building_data.groupby(['CENSUSCODE', 'OCC_CLS', 'PRIM_OCC']).agg({'BUILD_ID':'count', 'SQFEET':'sum'}).reset_index()\n",
-    "    # rename the columns\n",
-    "    count_building_data = count_building_data.rename(columns={'BUILD_ID':'COUNT'})\n",
-    "    return count_building_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/capstone/lib/python3.12/site-packages/geopandas/geodataframe.py:1819: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  super().__setitem__(key, value)\n",
-      "/opt/anaconda3/envs/capstone/lib/python3.12/site-packages/geopandas/geodataframe.py:1819: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  super().__setitem__(key, value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "count_building_data = aggregate_building_counts(gdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CENSUSCODE</th>\n",
-       "      <th>OCC_CLS</th>\n",
-       "      <th>PRIM_OCC</th>\n",
-       "      <th>COUNT</th>\n",
-       "      <th>SQFEET</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>06001400100</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>104</td>\n",
-       "      <td>5.108791e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>06001400100</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>MULTI FAMILY</td>\n",
-       "      <td>22</td>\n",
-       "      <td>3.491409e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>06001400100</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.186831e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06001400100</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>SINGLE FAMILY</td>\n",
-       "      <td>1162</td>\n",
-       "      <td>2.378443e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>06001400200</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3.368561e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34196</th>\n",
-       "      <td>06115041101</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>SINGLE FAMILY</td>\n",
-       "      <td>903</td>\n",
-       "      <td>1.527391e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34197</th>\n",
-       "      <td>06115041102</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>189</td>\n",
-       "      <td>3.991922e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34198</th>\n",
-       "      <td>06115041102</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>MULTI FAMILY</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1.241931e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34199</th>\n",
-       "      <td>06115041102</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>354</td>\n",
-       "      <td>5.515065e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34200</th>\n",
-       "      <td>06115041102</td>\n",
-       "      <td>RESIDENTIAL</td>\n",
-       "      <td>SINGLE FAMILY</td>\n",
-       "      <td>474</td>\n",
-       "      <td>8.375529e+05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>34201 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        CENSUSCODE      OCC_CLS       PRIM_OCC  COUNT        SQFEET\n",
-       "0      06001400100        OTHER          OTHER    104  5.108791e+05\n",
-       "1      06001400100  RESIDENTIAL   MULTI FAMILY     22  3.491409e+04\n",
-       "2      06001400100  RESIDENTIAL          OTHER     10  1.186831e+05\n",
-       "3      06001400100  RESIDENTIAL  SINGLE FAMILY   1162  2.378443e+06\n",
-       "4      06001400200        OTHER          OTHER     46  3.368561e+05\n",
-       "...            ...          ...            ...    ...           ...\n",
-       "34196  06115041101  RESIDENTIAL  SINGLE FAMILY    903  1.527391e+06\n",
-       "34197  06115041102        OTHER          OTHER    189  3.991922e+05\n",
-       "34198  06115041102  RESIDENTIAL   MULTI FAMILY     67  1.241931e+05\n",
-       "34199  06115041102  RESIDENTIAL          OTHER    354  5.515065e+05\n",
-       "34200  06115041102  RESIDENTIAL  SINGLE FAMILY    474  8.375529e+05\n",
-       "\n",
-       "[34201 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_building_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pivot_building_data(count_building_data):\n",
-    "    df = count_building_data.copy()\n",
-    "\n",
-    "    # Create a pivot table\n",
-    "    df_pivot = df.pivot_table(index=\"CENSUSCODE\", columns=[\"OCC_CLS\", \"PRIM_OCC\"], values=\"COUNT\", aggfunc=\"sum\", fill_value=0)\n",
-    "\n",
-    "    # Flatten MultiIndex columns\n",
-    "    df_pivot.columns = [f\"{col[0]}_{col[1]}\" for col in df_pivot.columns]\n",
-    "    df_pivot = df_pivot.reset_index()\n",
-    "\n",
-    "    return df_pivot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pivot = pivot_building_data(count_building_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CENSUSCODE</th>\n",
-       "      <th>OTHER_OTHER</th>\n",
-       "      <th>RESIDENTIAL_MULTI FAMILY</th>\n",
-       "      <th>RESIDENTIAL_OTHER</th>\n",
-       "      <th>RESIDENTIAL_SINGLE FAMILY</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>06001400100</td>\n",
-       "      <td>104</td>\n",
-       "      <td>22</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>06001400200</td>\n",
-       "      <td>46</td>\n",
-       "      <td>110</td>\n",
-       "      <td>2</td>\n",
-       "      <td>538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>06001400300</td>\n",
-       "      <td>67</td>\n",
-       "      <td>416</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06001400400</td>\n",
-       "      <td>57</td>\n",
-       "      <td>391</td>\n",
-       "      <td>3</td>\n",
-       "      <td>777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>06001400500</td>\n",
-       "      <td>56</td>\n",
-       "      <td>342</td>\n",
-       "      <td>6</td>\n",
-       "      <td>614</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9108</th>\n",
-       "      <td>06115040902</td>\n",
-       "      <td>759</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9109</th>\n",
-       "      <td>06115041001</td>\n",
-       "      <td>579</td>\n",
-       "      <td>90</td>\n",
-       "      <td>360</td>\n",
-       "      <td>1807</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9110</th>\n",
-       "      <td>06115041002</td>\n",
-       "      <td>270</td>\n",
-       "      <td>155</td>\n",
-       "      <td>628</td>\n",
-       "      <td>1771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9111</th>\n",
-       "      <td>06115041101</td>\n",
-       "      <td>373</td>\n",
-       "      <td>86</td>\n",
-       "      <td>596</td>\n",
-       "      <td>903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9112</th>\n",
-       "      <td>06115041102</td>\n",
-       "      <td>189</td>\n",
-       "      <td>67</td>\n",
-       "      <td>354</td>\n",
-       "      <td>474</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9113 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       CENSUSCODE  OTHER_OTHER  RESIDENTIAL_MULTI FAMILY  RESIDENTIAL_OTHER  \\\n",
-       "0     06001400100          104                        22                 10   \n",
-       "1     06001400200           46                       110                  2   \n",
-       "2     06001400300           67                       416                  7   \n",
-       "3     06001400400           57                       391                  3   \n",
-       "4     06001400500           56                       342                  6   \n",
-       "...           ...          ...                       ...                ...   \n",
-       "9108  06115040902          759                         0                  0   \n",
-       "9109  06115041001          579                        90                360   \n",
-       "9110  06115041002          270                       155                628   \n",
-       "9111  06115041101          373                        86                596   \n",
-       "9112  06115041102          189                        67                354   \n",
-       "\n",
-       "      RESIDENTIAL_SINGLE FAMILY  \n",
-       "0                          1162  \n",
-       "1                           538  \n",
-       "2                          1139  \n",
-       "3                           777  \n",
-       "4                           614  \n",
-       "...                         ...  \n",
-       "9108                          0  \n",
-       "9109                       1807  \n",
-       "9110                       1771  \n",
-       "9111                        903  \n",
-       "9112                        474  \n",
-       "\n",
-       "[9113 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pivot"
    ]
   },
   {
