Add function to only read the columns we need.

--- a/WorkingScripts/o3_download_building_structure.ipynb
+++ b/WorkingScripts/o3_download_building_structure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,6 @@
     "import numpy as np\n",
     "#import fiona\n",
     "import pyogrio\n",
-    "import os\n",
-    "\n",
     "import requests\n",
     "import zipfile\n",
     "import os\n",
@@ -229,7 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read only the specified columns\n",
+    "def read_cols(path):\n",
+    "    cols = ['OCC_CLS', 'PRIM_OCC', 'CENSUSCODE', 'LONGITUDE', 'LATITUDE']\n",
+    "    return gpd.read_file(path, columns=cols)\n",
+    "    \n",
+    "# only read specific columns, it can reduce the memory usage and time for each state    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +263,7 @@
     "        gdb_path = os.path.join(building_data_directory)\n",
     "        if os.path.exists(gdb_path):\n",
     "            print(f\"Reading {gdb_path}\")\n",
-    "            return gpd.read_file(gdb_path)\n",
+    "            return read_cols(gdb_path)\n",
     "        else:\n",
     "            print(f\"{gdb_path} does not exist.\")\n",
     "            print(\"Please download the gdb file from the USGS website.\")"
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,17 +359,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading building data for California\n",
-      "c:\\Users\\ysurya\\Documents\\EarthquakeDamageModel_Heinz\\Data\\building_data_gdb\\Deliverable20230728CA\\CA_Structures.gdb\\CA.csv does not exist.\n",
-      "Reading c:\\Users\\ysurya\\Documents\\EarthquakeDamageModel_Heinz\\Data\\building_data_gdb\\Deliverable20230728CA\\CA_Structures.gdb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for state in states_data:\n",
     "    state_name, stateid = state\n",
